# inventory-managment

./: .replit  Pipfile  pyproject.toml
inventoryApi/: manage.py
inventoryApi/api/: api.py
inventoryApi/api/migrations/: 0001_initial.py  0002_warehouse_remove_item_amount_stock_and_more.py
inventoryApi/api/models/: __init__.py  item.py  stock.py  warehouse.py
inventoryApi/api/schemas/: item.py  stock.py  warehouse.py
inventoryApi/api/views/: item.py  stock.py  warehouse.py
inventoryApi/inventoryApi/: api.py  asgi.py  settings.py  urls.py  wsgi.py
inventoryApi/inventoryApi/api/models/: __init__.py  items.py
