[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["LarryFlint <<>>"]
description = ""
name = "repl_python3_inventory-managment"
version = "0.1.0"
[tool.poetry.dependencies]
Django = "^4.0.4"

python = "^3.8"
django-ninja = "^0.17.0"


[tool.poetry.dev-dependencies]
